Bugfixes and performance improvements...

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                 }
             }})
             .then(function(result) {
+                
                return this.query('upsert',{
                     id:null,
                     name:'bob',
@@ -96,6 +97,7 @@
                 }).exec();
             })
             .then(function(result) {
+                
                return this.query('upsert',{
                     id:null,
                     name:'jeb',
@@ -139,7 +141,6 @@
                return this.query('delete').where(['age','>=',25]).exec();
             })*/         
             .then(function(result) {
-
                return this.query('select').exec();
             })
             .then(function(result) {
@@ -147,11 +148,11 @@
                 this.query('select').exec().then(function(result) {
                     console.log(result.response === compare);
                 });*/
-                return this.query('select').where(['age','>=',25]).toCSV(true);
+                return this.query('select').toCSV(true);
             })  
             .then(function(result) {
                 console.log(result);
-                return someSQL('users').query('drop').exec();
+                return this.query('drop').exec();
             })
         </script>
     </body>
