--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             })
 */
 
+
             someSQL('users')//Table/Store Name
             .model([ //Data Model
                 {key:'id',type:'int',props:['pk','ai']},
@@ -55,22 +56,38 @@
                 {key:'postIDs',type:'array'},
                 {key:'meta',type:'map'}
             ])
-            .views({ //Cached views to show specific data
-                'get_user_by_name':[['name:string'],function(args) {
-                    return this.query('select').where(['name','=',args.name]).exec();
-                }],
-                'list_all_users':[['page:int'],function(args) {
-                    return this.query('select',['id','name']).exec();
-                }],                       
-            })
-            .actions({ //Cached actions to update specific data
-                'add_new_user':[['user:map'],function(args) {
-                    return this.query('upsert',args.user).exec();
-                }],
-                'login':[['username:string','password:string'], function(args) {
-                    return this.query('select',['id']).where([['username','=',args.username],'and',['password','=',args.password]]).exec();
-                }]
-            }).connect();
+            .views([ //Cached views to show specific data
+                {
+                    name: 'get_user_by_name',
+                    args: ['name:string'],
+                    call: function(args) {
+                        return this.query('select').where(['name','=',args.name]).exec();
+                    }
+                },
+                {
+                    name: 'list_all_users',
+                    args: ['page:int'],
+                    call: function(args) {
+                        return this.query('select',['id','name']).exec();
+                    }
+                }                    
+            ])
+            .actions([ //Cached actions to update specific data
+                {
+                    name:'add_new_user',
+                    args:['user:map'],
+                    call:function(args) {
+                        return this.query('upsert',args.user).exec();
+                    }
+                },
+                {
+                    name:'login',
+                    args:['username:string','password:string'],
+                    call:function(args) {
+                        return this.query('select',['id']).where([['username','=',args.username],'and',['password','=',args.password]]).exec();
+                    }
+                }
+            ]).connect();
 
             someSQL('*').on('change',function(e) {
                 //console.log(e);
@@ -88,7 +105,6 @@
                 }
             }})
             .then(function(result) {
-                
                return this.query('upsert',{
                     id:null,
                     name:'bob',
