--- a/examples/index.html
+++ b/examples/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="dist/some-sql.min.js"></script>
+        <script src="../dist/some-sql.min.js"></script>
     </head>
     <body>
         <script>
