--- a/examples/react-todo/index.html
+++ b/examples/react-todo/index.html
@@ -1,14 +1,14 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.2.4/milligram.min.css" />
-        <script data-main="/index.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.2/require.min.js"></script>
+        <script data-main="/react-todo/index.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.2/require.min.js"></script>
         <script>
 
             require.config({
                 paths: {
                     "react": "https://cdnjs.cloudflare.com/ajax/libs/react/15.4.1/react.min",
                     "react-dom":"https://cdnjs.cloudflare.com/ajax/libs/react/15.4.1/react-dom.min",
-                    "some-sql":"/some-sql.min.0.1.6"
+                    "some-sql":"../some-sql.min"
                 }                
             })
 
