--- a/examples/testing.html
+++ b/examples/testing.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="../dist/some-sql.min.0.1.3.js"></script>
+        <script src="some-sql.min.js"></script>
     </head>
     <body>
         <script>
@@ -60,15 +60,15 @@
                 {
                     name: 'get_user_by_name',
                     args: ['name:string'],
-                    call: function(args) {
-                        return this.query('select').where(['name','=',args.name]).exec();
+                    call: function(args, db) {
+                        return db.query('select').where(['name','=',args.name]).exec();
                     }
                 },
                 {
                     name: 'list_all_users',
                     args: ['page:int'],
-                    call: function(args) {
-                        return this.query('select',['id','name']).exec();
+                    call: function(args, db) {
+                        return db.query('select',['id','name']).exec();
                     }
                 }                    
             ])
@@ -76,15 +76,15 @@
                 {
                     name:'add_new_user',
                     args:['user:map'],
-                    call:function(args) {
-                        return this.query('upsert',args.user).exec();
+                    call:function(args, db) {
+                        return db.query('upsert',args.user).exec();
                     }
                 },
                 {
                     name:'login',
                     args:['username:string','password:string'],
-                    call:function(args) {
-                        return this.query('select',['id']).where([['username','=',args.username],'and',['password','=',args.password]]).exec();
+                    call:function(args, db) {
+                        return db.query('select',['id']).where([['username','=',args.username],'and',['password','=',args.password]]).exec();
                     }
                 }
             ]).connect();
@@ -104,8 +104,8 @@
                     favorteColor:'blue'
                 }
             }})
-            .then(function(result) {
-               return this.query('upsert',{
+            .then(function(result, db) {
+               return db.query('upsert',{
                     id:null,
                     name:'bob',
                     age:20,
@@ -116,8 +116,9 @@
                     }
                 }).exec();
             })
-            .then(function(result) {
-               return this.query('upsert',{
+            .then(function(result, db) {
+               console.log("2",db);
+               return db.query('upsert',{
                     id:null,
                     name:'jeb',
                     age:25,
@@ -128,8 +129,8 @@
                     }
                 }).exec();
             })
-            .then(function(result) {
-               return this.query('upsert',{
+            .then(function(result, db) {
+               return db.query('upsert',{
                     id:null,
                     name:'kevin',
                     age:50,
@@ -140,8 +141,8 @@
                     }
                 }).exec();
             })
-            .then(function(result) {
-               return this.query('upsert',{
+            .then(function(result, db) {
+               return db.query('upsert',{
                     id:null,
                     name:'scott',
                     age:21,
@@ -152,28 +153,28 @@
                     }
                 }).exec();
             })
-            .then(function(result) {
+            .then(function(result, db) {
                 console.log(result);
-               return this.query('upsert',{balance:50}).where(['name','=','jeb']).exec();
+               return db.query('upsert',{balance:50}).where(['name','=','jeb']).exec();
             })   
             /*.then(function(result) {
                return this.query('delete').where(['age','>=',25]).exec();
             })*/         
-            .then(function(result) {
+            .then(function(result, db) {
                 console.log(result);
                 //return this.query('select').orderBy({name:'desc'}).where([['age','>',25],'and',['id','>',2]]).toCSV();
-                return this.query('select',['name','age']).orderBy({name:'asc',age:'asc'}).toCSV();
+                return db.query('select',['name','age']).orderBy({name:'asc',age:'asc'}).toCSV();
             })
-            .then(function(result) {
-                this.query('select').toCSV().then(function(result2) {
+            .then(function(result, db) {
+                db.query('select').toCSV().then(function(result2) {
                     console.log('immuTest: ' + (result === result2));
                 });
                 console.log(result);
-                return this.query('select').toCSV();
+                return db.query('select').toCSV();
             })  
-            .then(function(result) {
+            .then(function(result, db) {
                 console.log(result);
-                return this.query('drop').exec();
+                return db.query('drop').exec();
             })
 
             /*
