--- a/examples/react-todo/index.html
+++ b/examples/react-todo/index.html
@@ -18,6 +18,10 @@
             body .container {
                 max-width: 60rem;
             }
+            .noselect {
+                user-select: none;
+                -webkit-user-select: none;
+            }
         </style>
     </head>
     <body>
