--- a/examples/react-draw/index.html
+++ b/examples/react-draw/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.2.4/milligram.min.css" />
-        <script data-main="/react-todo/index.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.2/require.min.js"></script>
+        <script data-main="/react-draw/index.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.2/require.min.js"></script>
         <script>
 
             require.config({
@@ -25,6 +25,6 @@
         </style>
     </head>
     <body>
-
+        Work in progress... nothing to see here (yet).
     </body>
 </html>
