--- a/examples/testing.html
+++ b/examples/testing.html
@@ -260,5 +260,6 @@
 
             */
         </script>
+        Everything is in the console, not much to see here just a scratchpad to test queries with.
     </body>
 </html> 
