--- a/examples/testing.html
+++ b/examples/testing.html
@@ -67,6 +67,10 @@
 */
 
         nSQL('users') //Table/Store Name
+            .queryFilter(function(query, complete) {
+                console.log(query);
+                complete(query);
+            })
             .model([ //Data Model
                 {
                     key: 'id',
